--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth: ^4.7.2
   get_storage: ^2.1.1
   cloud_firestore: ^4.8.4
+  google_sign_in: ^6.1.4
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
